sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:5: error: illegal start of simple expression
  }
  ^