sort.pancake.GatesPancake.scala.code
var t=0
def solve () {
  while (!estTriee) {
    if (t)
  }
}